Fix: overflowing container padding set 0

--- a/src/components/Paginate/style.css
+++ b/src/components/Paginate/style.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 1.2rem;
+  padding: 0;
   list-style: none;
 }
 
